This file defines the changes made to Via - Virtual classroom

last update 10/02/2022 2021011112
- Cleanup in code
- Prevent multiple API calls when unsubscribing a user
- Fix updating multimediaquality in viaassign

last update 12/01/2022 2021011111
- Fix for Via HTML when Moodle is not at root
- Add validation to end tasks if configuration is empty
- Fix for emailstop property which was nos correctly used
- Add log to understand why some participant have no userid
- Add validation to prevent error in presence list

last update 09/12/2021 2021011110
- New option in viahtml API: PortalID
- Fix test of API before saving

last update 30/11/2021 2021011109
- Fix duration of playback could exceed the max size allowed
- Fix encoding error in language file

last update 17/11/2021 2021011108
- Handle activity version in activity template
- Fix text with invalid char resulting in SQL error

last update 09/09/2021 2021011107
- Fix bug of users becoming animators unexpectedly.
- Fix diplay of record options
- Fix : Options for ViaHTML5 are shown if company is in VRoomOnly mode
- Fix : Admin not subscribed can now access to the activity

last update 26/07/2021 2021011106
- New parameter to link activities and users to a Lära branch.
- Apply this new settings to activity and users
- Fix for data not synchronized between Lära and Moodle
- Show record options for ViaHTML5.

last update 22/07/2021 2021011105
- fix : prevent removing subscription of Host even if no change.
- Users unsubscribed from a course remain the host of activities in that course.

last update 20/05/2021 2021011104
- New option for Via HTML5 to use presence tracking

last update 13/05/2021 2021011103
-Fixes in users and subscriptions synchronisation
-New options in plugin settings for Via HTML5 API + button to test it
-New option to clean up Via users
-New option to create Via HTML5 activities instead of Via9
-New capability to allow access to via even if not subscribed

last update 22/10/2020 2020102201